--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2.63"
+#wasm-bindgen = "0.2.63"
+wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 js-sys = "0.3.44"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-chrono = "0.4.15"
+# chrono = "0.4.15"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -31,7 +32,7 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 
 [dependencies.web-sys]
-version = "0.3.4"
+web-sys = "0.3.45"
 features = [
   'console',
   'Document',
